JDK 17 migration related fixes